# mamba-ssm

./: .gitignore  Cargo.toml  LICENSE  README.md  download.sh
mamba-ssm/: Cargo.toml  README.md
mamba-ssm/benches/: conv1d.rs  elemwise.rs  linear.rs
mamba-ssm/src/: context.rs  lib.rs  main.rs  model.rs  primitives.rs  selective_ssm.rs  utils.rs
mamba-ssm/src/nn/: conv1d.rs  linear.rs  mod.rs  selective_ssm.rs
mamba-ssm/src/ops/: elemwise.rs  mod.rs
models/: README.txt
prompts/: chat.txt
