[package]
name = "mamba-ssm"
version = "0.1.0"
edition = "2021"
authors = ["flawedmatrix"]
license = "MIT"
repository = "https://github.com/flawedmatrix/mamba-ssm"
readme = "README.md"

[features]
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle/cudnn"]

[dependencies]
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", optional = true }
candle = { package = "candle-core", version = "0.3.2" }
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tokenizers = "0.15"
anyhow = "1"
clap = "4"
serde = "1"
serde_json = "1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
tracing = "0.1"
rand = "0.8"
