[package]
name = "mamba-ssm"
version = "0.1.0"
edition = "2021"
authors = ["flawedmatrix"]
license = "MIT"
repository = "https://github.com/flawedmatrix/mamba-ssm"
readme = "README.md"

[features]
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle/cudnn"]
metal = ["candle/metal", "candle-nn/metal"]


[dependencies]
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", optional = true }
candle = { package = "candle-core", version = "0.4.1" }
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
candle-metal-kernels = "0.4.1"
tokenizers = "0.15"
anyhow = "1"
clap = "4"
serde = "1"
serde_json = "1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
tracing = "0.1"
rand = "0.8"
rayon = "1.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "conv1d_bench"
path = "benches/conv1d.rs"
harness = false

[[bench]]
name = "elemwise_bench"
path = "benches/elemwise.rs"
harness = false

[[bench]]
name = "linear_bench"
path = "benches/linear.rs"
harness = false
